<resources>
    <string name="app_name">mainActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">dashboard\n</string>
    <string name="title_notifications">notifications\n</string>
    <string name="title_profile">Profile</string>
    <string name="add_guide">Add Guide</string>
    <string name="title_guides">Guides</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="write_your_review">Write Your Review!</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="tell_us_your_skills">Tell us your skills!</string>
    <string name="update_skills">Update Skills</string>
    <string name="profile_details">Profile Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_to_doit">Welcome to DoIT</string>
    <string name="share_what_you_know_learn_what_you_don_t">Share What You Know, Learn What You Don’t</string>
    <string name="connect_with">Connect with</string>
    <string name="email">Email</string>
    <string name="facebook_coming_soon">Facebook (Coming soon)</string>
    <string name="guide_title">Guide Title</string>
    <string name="guide_description">Guide Description</string>
    <string name="button">Button</string>
    <string name="change_email">Change Email?</string>
    <string name="email_address">Email Address</string>
    <string name="events">Events</string>
    <string name="create_event">Create Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="save_event">Save Event</string>
    <string name="users_with_similar_skills">Users with similar skills!</string>
    <string name="explore_more_skills">Explore more skills!</string>
    <string name="guides">Guides</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="ready_to_learn_and_explore">Ready to learn and explore.</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="skills">Skills</string>
    <string name="this_user_has_no_reviews">This user has no reviews!</string>
    <string name="write_a_review">Write a review!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="guide_description_here">Guide description here</string>
    <string name="reviewer_name">Reviewer Name</string>
    <string name="review_text">Review Text</string>
    <string name="review_date">Review Date</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>