<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/welcomeTextView"
        style="@style/TitleTextStyle"
        android:text="@string/welcome_to_doit"
        android:layout_centerInParent="true"
        android:textColor="@color/blueBase" />

    <TextView
        android:id="@+id/welcInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginTop="16dp"
        android:text="@string/share_what_you_know_learn_what_you_don_t"
        android:textSize="14sp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/connectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:text="@string/connect_with"
        android:textSize="14sp" />

    <Button
        android:id="@+id/emailConnect"
        style="@style/LoginButtonStyle"
        android:layout_below="@id/connectTextView"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blueLight"
        android:textColor="@color/blueBase"
        android:text="@string/email" />

    <Button
        android:id="@+id/facebookConnect"
        style="@style/LoginButtonStyle"
        android:layout_below="@id/emailConnect"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blueBase"
        android:text="@string/facebook_coming_soon"
        android:textColor="@color/blueLight" />

</RelativeLayout>
