<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/blueLightest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/profile_details_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_details"
            android:textSize="20sp"
            android:textColor="@color/blueDark"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/firstName"
            style="@style/DetailsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/lastName"
            style="@style/DetailsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

        <EditText
            android:id="@+id/Email"
            style="@style/DetailsEditText"
            android:layout_width="match_parent"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/Phone"
            style="@style/DetailsEditText"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:hint="@string/date_of_birth"
            android:inputType="none" />

        <Button
            android:id="@+id/updateButton"
            style="@style/LoginButtonStyle"
            android:text="@string/update"
            android:textColor="@color/blueLightest"
            android:backgroundTint="@color/blueDark"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</LinearLayout>