<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blueLightest"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/write_your_review" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="39dp"
        android:layout_height="103dp"
        app:srcCompat="@drawable/starhollow"
        android:layout_below="@id/reviewTitle"
        android:layout_marginStart="100dp" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="39dp"
        android:layout_height="103dp"
        app:srcCompat="@drawable/starhollow"
        android:layout_below="@id/reviewTitle"
        android:layout_marginStart="145dp" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="39dp"
        android:layout_height="103dp"
        app:srcCompat="@drawable/starhollow"
        android:layout_below="@id/reviewTitle"
        android:layout_marginStart="190dp" />

    <ImageView
        android:id="@+id/star4"
        android:layout_width="39dp"
        android:layout_height="103dp"
        app:srcCompat="@drawable/starhollow"
        android:layout_below="@id/reviewTitle"
        android:layout_marginStart="235dp" />

    <ImageView
        android:id="@+id/star5"
        android:layout_width="39dp"
        android:layout_height="103dp"
        app:srcCompat="@drawable/starhollow"
        android:layout_below="@id/reviewTitle"
        android:layout_marginStart="280dp" />

    <EditText
        android:id="@+id/edittextReview"
        style="@style/BubbleEditText"
        android:layout_below="@id/star3"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        android:minHeight="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/write_your_review_here" />

    <!-- LinearLayout for buttons side by side -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edittextReview"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/submitButton"
            style="@style/LoginButtonStyle"
            android:backgroundTint="@color/blueBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginEnd="8dp"/> <!-- Adds space between buttons -->

        <Button
            android:id="@+id/cancelButton"
            style="@style/LoginButtonStyle"
            android:backgroundTint="@color/blueLight"
            android:textColor="@color/blueBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>
